# svelte-transition-converter

./: LICENSE  README.md  build.sh  index.html  svelte_transition_converter-7a8cda78f5645c04.js  svelte_transition_converter-7a8cda78f5645c04_bg.wasm  svelte_transition_converter.js  svelte_transition_converter_bg.wasm
.github/: FUNDING.yml
code/: Cargo.toml  Trunk.toml  index.html
code/src/: main.rs
